# rescript

./: .gitattributes  .gitignore  .mcp.json  .ocamlformat  .ocamlformat-ignore  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  CREDITS.md  Example.res  Makefile  README.md  analysis.opam  biome.json  dune-project  package-lock.json  package.json  rescript.json  rescript.opam  rescript.opam.template  tools.opam  tsconfig.json  yarn.config.cjs
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  postCreate.sh
analysis/: README.md
cli/: bsc.js  bstracing.js  rescript-legacy.js  rescript-tools.js  rescript.js  rewatch.js
compiler/: dune
docs/: JSXV4.md
lib_dev/: README.md  paths.js  process.js  utils.js
ninja/: configure.py
playground/: playground_test.cjs  playground_test.js  upload_bundle.sh
rewatch/: Cargo.toml  CompilerConfigurationSpec.md  README.md
rewatch/src/: build.rs  cli.rs  config.rs  format.rs  helpers.rs  lib.rs  lock.rs  main.rs  project_context.rs  sourcedirs.rs  watcher.rs
rewatch/src/helpers/: deserialize.rs
rewatch/testrepo/: .gitignore  bsconfig.json  package.json  rescript.json
rewatch/testrepo/src/: Test.mjs
rewatch/tests/: clean.sh  compile.sh  compiler-args.sh  experimental-invalid.sh  experimental.sh  format.sh  get_bin_paths.js  legacy-utils.sh  legacy.sh  lock.sh  suffix.sh  suite-ci.sh  utils.sh  watch.sh
rewatch/tests/snapshots/: bs-dev-dependency-used-by-non-dev-source.txt  dependency-cycle.txt  remove-file.txt  rename-file-internal-dep-namespace.txt  rename-file-internal-dep.txt  rename-file-with-interface.txt  rename-file.txt  rename-interface-file.txt
runtime/: Array.resi  Belt.res  Belt_Array.res  Belt_Array.resi  Belt_Float.resi  Belt_HashMap.resi  Belt_Int.resi  Belt_List.res  Belt_List.resi  Belt_Map.resi  Belt_MapDict.resi  Belt_MapInt.resi  Belt_MapString.res  Belt_MapString.resi  Belt_MutableMap.res  Belt_MutableMap.resi  Belt_MutableMapInt.resi  Belt_MutableMapString.resi  Belt_MutableQueue.res  Belt_MutableQueue.resi  Belt_MutableSet.res  Belt_MutableSet.resi  Belt_MutableSetInt.resi  Belt_MutableSetString.resi  Belt_Option.res  Belt_Option.resi  Belt_Range.resi  Belt_Result.res  Belt_Result.resi  Belt_Set.resi  Belt_SetDict.resi  Belt_SetInt.resi  Belt_SetString.res  Belt_SetString.resi  Belt_SortArray.resi  Belt_internalAVLset.res  Belt_internalAVLtree.res  Belt_internalMapInt.res  Belt_internalMapString.res  Belt_internalSetInt.res  (+133 more)
scripts/: buildNinjaBinary.js  (+14 more)
(+1839 files in other folders)
